--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,10 @@
 [phases.setup]
-nixPkgs = ['python311', 'postgresql']
+nixPkgs = ['python311', 'python311Packages.pip', 'postgresql']
 
 [phases.install]
 cmds = [
-    'pip install -r requirements.txt'
+    'python -m pip install --upgrade pip',
+    'python -m pip install -r requirements.txt'
 ]
 
 [phases.build]
