--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 Django==4.2.7
 djangorestframework==3.14.0
 python-dotenv==1.0.0
-langchain==0.1.0
-langchain-openai==0.1.0
-langchain-ollama==0.1.0
-langchain-community==0.0.38
 requests==2.31.0
-elasticsearch==8.11.0
-pydantic==2.5.0
-unstructured[pdf]==0.11.6
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
-django-cors-headers==4.3.1 
+django-cors-headers==4.3.1
+pydantic==2.5.0
+langchain-core==0.1.52
+langchain==0.1.20
+langchain-openai==0.1.8
+langchain-community==0.0.38 
