--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,4 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "gunicorn twenty_one_tech_pocs.wsgi:application --bind 0.0.0.0:$PORT"
-healthcheckPath = "/"
-healthcheckTimeout = 100
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10 
+startCommand = "python manage.py migrate && gunicorn twenty_one_tech_pocs.wsgi:application --bind 0.0.0.0:$PORT" 
