--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -23,9 +23,12 @@ langchain==0.3.8
 langchain-core>=0.3.0,<0.4.0
 langchain-openai==0.2.9
 langchain-community==0.3.8
+langchain-elasticsearch
+langchain-text-splitters
+langchain-ollama
 
 # Document Processing (only if you're using UnstructuredPDFLoader)
 unstructured[pdf]==0.15.13
 
 # Vector Database (only if using Elasticsearch)
-elasticsearch==8.14.0 
+elasticsearch==8.14.0
