--- a/resources/docker-compose.yml
+++ b/resources/docker-compose.yml
@@ -17,6 +17,12 @@ services:
     command: >
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
+    deploy:
+      resources:
+        limits:
+          memory: 4G
+        reservations:
+          memory: 2G
     networks:
       - tech
 
