--- a/resources/dockerfile
+++ b/resources/dockerfile
@@ -19,14 +19,20 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     pandoc \
     gcc \
     g++ \
+    unzip \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 
 # Install Python dependencies and download NLTK data
 RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir "unstructured[pdf]" "pdfminer.six==20240706" && \
-    python -m nltk.downloader -d /usr/local/share/nltk_data punkt
+    pip install --no-cache-dir "unstructured[pdf]" "pdfminer.six==20240706"
+
+# Manually download and unzip NLTK data to the location specified by NLTK_DATA
+RUN mkdir -p ${NLTK_DATA}/tokenizers && \
+    curl -L "https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip" -o "${NLTK_DATA}/tokenizers/punkt.zip" && \
+    unzip "${NLTK_DATA}/tokenizers/punkt.zip" -d "${NLTK_DATA}/tokenizers/" && \
+    rm "${NLTK_DATA}/tokenizers/punkt.zip"
 
 COPY . .
 
