chore: update Dockerfile to set NLTK data installation path for unstructured package - Adjusted the installation process to place NLTK data in the correct site-packages directory for improved compatibility

--- a/resources/dockerfile
+++ b/resources/dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.9-slim-buster
 
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    NLTK_DATA=/nltk_data
+    PYTHONDONTWRITEBYTECODE=1
 
 WORKDIR /app
 
@@ -28,12 +27,13 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt && \
     pip install --no-cache-dir "unstructured[pdf]" "pdfminer.six==20240706"
 
-# Manually create, download, and set permissions for NLTK data
-RUN mkdir -p /nltk_data/tokenizers && \
-    curl -L "https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip" -o "/nltk_data/tokenizers/punkt.zip" && \
-    unzip "/nltk_data/tokenizers/punkt.zip" -d "/nltk_data/tokenizers/" && \
-    rm "/nltk_data/tokenizers/punkt.zip" && \
-    chmod -R 755 /nltk_data
+# Unstructured looks for NLTK data in a hardcoded relative path.
+# We must place the data in the correct site-packages directory.
+RUN UNSTRUCTURED_NLTK_PATH=/usr/local/lib/python3.9/site-packages/unstructured/nlp/nltk_data && \
+    mkdir -p ${UNSTRUCTURED_NLTK_PATH}/tokenizers && \
+    curl -L "https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip" -o "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip" && \
+    unzip "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip" -d "${UNSTRUCTURED_NLTK_PATH}/tokenizers/" && \
+    rm "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip"
 
 COPY . .
 
