--- a/resources/dockerfile
+++ b/resources/dockerfile
@@ -25,15 +25,15 @@ COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir "unstructured[pdf]" "pdfminer.six==20240706"
+    # pip install --no-cache-dir "unstructured[pdf]" "pdfminer.six==20240706"
 
 # Unstructured looks for NLTK data in a hardcoded relative path.
-# We must place the data in the correct site-packages directory.
-RUN UNSTRUCTURED_NLTK_PATH=/usr/local/lib/python3.9/site-packages/unstructured/nlp/nltk_data && \
-    mkdir -p ${UNSTRUCTURED_NLTK_PATH}/tokenizers && \
-    curl -L "https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip" -o "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip" && \
-    unzip "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip" -d "${UNSTRUCTURED_NLTK_PATH}/tokenizers/" && \
-    rm "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip"
+# # We must place the data in the correct site-packages directory.
+# RUN UNSTRUCTURED_NLTK_PATH=/usr/local/lib/python3.9/site-packages/unstructured/nlp/nltk_data && \
+#     mkdir -p ${UNSTRUCTURED_NLTK_PATH}/tokenizers && \
+#     curl -L "https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip" -o "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip" && \
+#     unzip "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip" -d "${UNSTRUCTURED_NLTK_PATH}/tokenizers/" && \
+#     rm "${UNSTRUCTURED_NLTK_PATH}/tokenizers/punkt.zip"
 
 COPY . .
 
