--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -23,9 +23,9 @@ langchain==0.3.8
 langchain-core>=0.3.0,<0.4.0
 langchain-openai==0.2.9
 langchain-community==0.3.8
-langchain-elasticsearch
-langchain-text-splitters
-langchain-ollama
+langchain-elasticsearch==0.3.0
+langchain-text-splitters==0.3.8
+langchain-ollama==0.2.0
 
 # Document Processing (only if you're using UnstructuredPDFLoader)
 unstructured[pdf]==0.15.13
