--- a/resources/dockerfile
+++ b/resources/dockerfile
@@ -24,7 +24,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt && \
+RUN pip install --no-cache-dir -r requirements.txt
     # pip install --no-cache-dir "unstructured[pdf]" "pdfminer.six==20240706"
 
 # Unstructured looks for NLTK data in a hardcoded relative path.
