--- a/resources/docker-compose.yml
+++ b/resources/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: django_app
     ports:
-      - "8001:8000" # Changed host port from 8000 to 8001
+      - "8001:8000" # HTTPS Django server on port 8001
     env_file:
       - ../.env
     environment:
@@ -16,7 +16,7 @@ services:
       - ../twenty_one_tech_pocs:/app
     command: >
       sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+             python manage.py runserver_plus --cert-file cert.pem --key-file key.pem 0.0.0.0:8000"
     deploy:
       resources:
         limits:
