--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -2,6 +2,8 @@
 Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
+django-extensions==4.1
+pyOpenSSL==25.1.0
 
 # Environment and Configuration
 python-dotenv==1.0.0
