--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-extensions==4.1
 pyOpenSSL==25.1.0
+Werkzeug==3.1.3
 
 # Environment and Configuration
 python-dotenv==1.0.0
