--- a/resources/docker-compose.prod.yml
+++ b/resources/docker-compose.prod.yml
@@ -34,10 +34,10 @@ services:
       - "8001:8001"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../twenty_one_tech_pocs/cert.pem:/etc/nginx/ssl/cert.pem
-      - ../twenty_one_tech_pocs/key.pem:/etc/nginx/ssl/key.pem
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - ../twenty_one_tech_pocs/cert.pem:/etc/nginx/ssl/cert.pem:ro
+      - ../twenty_one_tech_pocs/key.pem:/etc/nginx/ssl/key.pem:ro
+      - static_volume:/app/staticfiles:ro
+      - media_volume:/app/media:ro
     depends_on:
       - django_app
     networks:
