--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -3,12 +3,13 @@ upstream django {
 }
 
 server {
-    listen 8001 ssl http2;
+    listen 8001 ssl;
+    http2 on;
     server_name 54.219.76.120;
 
     # SSL Configuration
     ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_private_key /etc/nginx/ssl/key.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
     ssl_prefer_server_ciphers off;
