--- a/resources/docker-compose.prod.yml
+++ b/resources/docker-compose.prod.yml
@@ -17,6 +17,7 @@ services:
       - ../twenty_one_tech_pocs:/app/twenty_one_tech_pocs
       - static_volume:/app/twenty_one_tech_pocs/staticfiles
       - media_volume:/app/twenty_one_tech_pocs/media
+      - temp_docs_volume:/app/twenty_one_tech_pocs/temp_documents
     networks:
       - tech
     restart: unless-stopped
@@ -80,6 +81,7 @@ volumes:
   ollama_data:
   static_volume:
   media_volume:
+  temp_docs_volume:
 
 networks:
   tech:
