--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -32,6 +32,10 @@ langchain-ollama==0.2.0
 
 # Document Processing
 PyMuPDF==1.24.9
+openpyxl==3.1.2
 
 # Vector Database (only if using Elasticsearch)
 elasticsearch==8.14.0
+
+# File Type Detection
+python-magic==0.4.27
