--- a/resources/dockerfile
+++ b/resources/dockerfile
@@ -14,6 +14,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     g++ \
     # For SSL certificate generation
     openssl \
+    # For python-magic file type detection
+    libmagic1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory in the container
