--- a/resources/dockerfile.prod
+++ b/resources/dockerfile.prod
@@ -10,6 +10,7 @@ ENV PYTHONUNBUFFERED=1 \
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     g++ \
+    libmagic1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory
